Skip to content

Could not Create the D3D11 device on Windows 8.1 (hr=0x80070057) on a HD4000 (Intel i5-3230M)

The exact line is direct3d11 error: Could not Create the D3D11 device. (hr=0x80070057). As j-b helpfully pointed out, the error code is INVALIDARG.

This Lenovo laptop has a i5-3230M CPU by Intel with integrated HD4000 graphics. Extended info about this system is attached.

Attached as well are the logs from multiple runs with different settings: Acceleration disabled, then set to DXVA2 and then to D3D11-VA on the first build, then D3D11-VA on the other builds.

In addition, there’s extended system information in the archive. It might have been collected before the most recent graphics driver update. (TBH, I don’t remember.)

The builds I’ve confirmed this on are:

  • vlc-3.0.0-20170209-1310-git-win64
  • vlc-3.0.0-20170218-0448-git-win64
  • vlc-3.0.0-20170331-1502-git-win64
  • vlc-3.0.0-20170413-0508-git-win64 α: No logs supplied for that build as I had to redo all of them and those weren’t really interesting anyways.

The sample I used is from the library: http://streams.videolan.org/samples/V-codecs/h264/H264_artifacts_motion.h264

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information