direct3d11: don't request specific feature levels

Windows 7 doesn't give a proper device otherwise. We don't use any specific
feature above 11 so we let the OS/driver decide what's best.

Close #18237

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>